--- a/sugrdady/index.html
+++ b/sugrdady/index.html
@@ -1,4 +1,8 @@
- <div class="container">
+<head>
+ <link rel="stylesheet"href="style.css">
+</head>
+
+<div class="container">
         <div class="section">
             <nav>
                 <div class="row align-items-center">
