--- a/sugrdady/index.html
+++ b/sugrdady/index.html
@@ -1,5 +1,5 @@
 <head>
- <link rel="stylesheet"href="style.css">
+ <link rel="stylesheet"href="https://nowaybyte.github.io/SugrDady/sugrdady/style.css">
 </head>
 
 <div class="container">
