--- a/sugrdady/index.html
+++ b/sugrdady/index.html
@@ -1,5 +1,7 @@
 <head>
  <link rel="stylesheet"href="https://nowaybyte.github.io/SugrDady/sugrdady/style.css">
+  <link rel="stylesheet"href="https://nowaybyte.github.io/SugrDady/sugrdady/script.js">
+ sugrdady/script.js
 </head>
 
 <div class="container">
