--- a/sugrdady/index.html
+++ b/sugrdady/index.html
@@ -1,6 +1,8 @@
 <head>
  <link rel="stylesheet"href="https://nowaybyte.github.io/SugrDady/sugrdady/style.css">
   <link rel="stylesheet"href="https://nowaybyte.github.io/SugrDady/sugrdady/script.js">
+ <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+<script src="https://codepen.io/abdullahturkmen/pen/ZEypWjK.js"></script>
 
 </head>
 
