--- a/sugrdady/index.html
+++ b/sugrdady/index.html
@@ -2,6 +2,7 @@
 
 <head>
  <link rel="stylesheet"href="https://nowaybyte.github.io/SugrDady/sugrdady/style.css">
+ <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" rel="stylesheet" />
  
 <script src="https://nowaybyte.github.io/SugrDady/sugrdady/script.js"></script>
 
