--- a/sugrdady/index.html
+++ b/sugrdady/index.html
@@ -2,9 +2,11 @@
 
 <head>
  <link rel="stylesheet"href="https://nowaybyte.github.io/SugrDady/sugrdady/style.css">
- <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" rel="stylesheet" />
- <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+ <link href="https://nowaybyte.github.io/SugrDady/sugrdady/all.min.css" rel="stylesheet" />
+ <script src="https://nowaybyte.github.io/SugrDady/sugrdady/jquery-3.6.0.js"></script>
+ <link href="https://nowaybyte.github.io/SugrDady/sugrdady/bootstrap.min.css" rel="stylesheet" />
 <script src="https://nowaybyte.github.io/SugrDady/sugrdady/script.js"></script>
+
 
 </head>
 
